--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     },
     "dependencies": {
         "apollo-server-express": "^3.3.0",
+        "class-validator": "^0.13.1",
+        "cors": "^2.8.5",
         "express": "^4.17.1",
         "graphql": "^15.6.1",
         "pg": "^8.7.1",
